--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "deploy": "hardhat deploy --export-all ./frontend/src/contracts/hardhat_contracts.json",
     "accounts": "hardhat accounts",
-    "chain": "npx hardhat node --network hardhat --no-deploy",
+    "chain": "hardhat node --network hardhat --no-deploy",
     "generate": "hardhat generate",
     "account": "hardhat account",
     "etherscan-verify": "hardhat etherscan-verify --api-key 1CP5KRVI3E3UT95AZP9TVU94KC7FS32Q2H",
