--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "authereum": "^0.1.14",
     "bnc-notify": "^1.9.5",
     "eth-hooks": "2.3.16",
+    "ethers": "^5.6.8",
     "fortmatic": "^2.3.0",
     "qrcode.react": "^3.0.2",
     "react": "^18.1.0",
@@ -28,7 +29,7 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
-},
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
